--- a/lib/cli/generate/template/layouts/main.pug
+++ b/lib/cli/generate/template/layouts/main.pug
@@ -1,3 +1,5 @@
+doctype html
+
 html(lang=language)
   head
     meta(charset="utf-8")
@@ -10,7 +12,7 @@ html(lang=language)
       style(type="text/css")=code
 
     each language in otherLanguages
-      link(rel='alternate', hreflang=language.name, href=languageUrl(language.name))
+      link(rel="alternate", hreflang=language.name, href=languageUrl(language.name))
   body
     block content
     block scripts
