--- a/templates/basic/layouts/main.pug
+++ b/templates/basic/layouts/main.pug
@@ -1,3 +1,5 @@
+include ../mixins/meta
+
 doctype html
 
 html(lang=language.name)
@@ -9,7 +11,7 @@ html(lang=language.name)
       link(rel="stylesheet" type="text/css" href=url)
 
     each code in css.inline
-      style(type="text/css")=code
+      style(type="text/css")!=code
 
     each language in otherLanguages
       link(rel="alternate", hreflang=language.name, href=languageUrl(language.name))
@@ -21,4 +23,4 @@ html(lang=language.name)
       script(type="text/javascript" src=url)
 
     each code in js.inline
-      script(type="text/javascript")=code
+      script(type="text/javascript")!=code
